refactor adding objects into a common package

--- a/templates/javascripts.html
+++ b/templates/javascripts.html
@@ -19,5 +19,9 @@
 <script type="text/javascript" src="{% static 'javascripts/team/team_table_directive.js' %}"></script>
 <script type="text/javascript" src="{% static 'javascripts/team/team_table_controller.js' %}"></script>
 <script type="text/javascript" src="{% static 'javascripts/team/team_service.js' %}"></script>
+<script type="text/javascript" src="{% static 'javascripts/team/add_team_controller.js' %}"></script>
+
+<script type="text/javascript" src="{% static 'javascripts/common/add_modal_controller.js' %}"></script>
+<script type="text/javascript" src="{% static 'javascripts/common/add_directive.js' %}"></script>
 
 {% endcompress %}
