--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 			<i class="fa fa-spinner fa-spin spinner" style="font-size:48px" ng-show="io"></i>
 			<div class="container-fluid">
 			  <div class="navbar-header">
-				<a class="navbar-brand" href="#">Team Reporter</a>
+				<a class="navbar-brand" href="#">Boomerang</a>
 			  </div>
 			  <div id="navbar" class="navbar-collapse collapse">
 				<ul class="nav navbar-nav">
