add role functionality, nearly complete.  start question page

--- a/templates/javascripts.html
+++ b/templates/javascripts.html
@@ -25,4 +25,6 @@
 <script type="text/javascript" src="{% static 'javascripts/common/add_directive.js' %}"></script>
 <script type="text/javascript" src="{% static 'javascripts/common/role_service.js' %}"></script>
 
+<script type="text/javascript" src="{% static 'javascripts/question/add_question_controller.js' %}"></script>
+
 {% endcompress %}
