delegated sending survey to separate task / improved email template with more responsive base / used datatrans in template for future internationalization

--- a/templates/email/survey.html
+++ b/templates/email/survey.html
@@ -1,20 +1,34 @@
-<!DOCTYPE html>
-<html lang="en">
-<body>
+{% extends "email/base.html" %}
+{% load i18n %}
 
-<p>Hello {{ user.first_name }}! Please find a moment to answer these questions.</p>
+{% block title %}{% blocktrans %}Boomerang survey{% endblocktrans %}{% endblock %}
+
+{% block body %}
+{% with user.first_name as name %}
+<h2>{% blocktrans %}Hello <b>{{ name }}</b>!{% endblocktrans %}</h2>
+{% endwith %}
+<p>{% blocktrans %}Please find a moment to answer these questions:{% endblocktrans %}</h2>
 
 <ul>
-{% for question in questions %}
+    {% for question in questions %}
     <li>{{ question.text }}</li>
-{% endfor %}
+    {% endfor %}
 </ul>
 
-<p>Have a good day!</p>
+<p>{% trans "Have a productive day," %}</p>
+<p><i>{% trans "Boomerang team" %}</i></p>
+{% endblock %}
+
+{% block ctabutton %}
+<table class="btn-primary" cellpadding="0" cellspacing="0" border="0">
+    <tr>
+        <td>
+            <a href="#">{% trans "Complete survey" %}</a>
+        </td>
+    </tr>
+</table>
+{% endblock %}
 
 {% comment %}
-    TODO: include link to answer the questions
+TODO: include link to answer the questions
 {% endcomment %}
-
-</body>
-</html>
