can now add and delete questions

--- a/templates/javascripts.html
+++ b/templates/javascripts.html
@@ -8,9 +8,12 @@
 <script type="text/javascript" src="{% static 'bower_components/angular-smart-table/dist/smart-table.js' %}"></script>
 <script type="text/javascript" src="{% static 'bower_components/angular-ui-router/release/angular-ui-router.min.js' %}"></script>
 <script type="text/javascript" src="{% static 'bower_components/angular-bootstrap-multiselect/angular-bootstrap-multiselect.js' %}"></script>
+<script type="text/javascript" src="{% static 'bower_components/angular-resource/angular-resource.min.js' %}"></script>
 
 <script type="text/javascript" src="{% static 'javascripts/app.module.js' %}"></script>
 <script type="text/javascript" src="{% static 'javascripts/app.routes.js' %}"></script>
+<script type="text/javascript" src="{% static 'javascripts/resources.js' %}"></script>
+
 <script type="text/javascript" src="{% static 'javascripts/user/user_table_directive.js' %}"></script>
 <script type="text/javascript" src="{% static 'javascripts/user/user_table_controller.js' %}"></script>
 <script type="text/javascript" src="{% static 'javascripts/user/add_user_controller.js' %}"></script>
@@ -26,5 +29,8 @@
 <script type="text/javascript" src="{% static 'javascripts/common/role_service.js' %}"></script>
 
 <script type="text/javascript" src="{% static 'javascripts/question/add_question_controller.js' %}"></script>
+<script type="text/javascript" src="{% static 'javascripts/question/report_service.js' %}"></script>
+<script type="text/javascript" src="{% static 'javascripts/question/question_table_controller.js' %}"></script>
+<script type="text/javascript" src="{% static 'javascripts/question/question_table_directive.js' %}"></script>
 
 {% endcompress %}
