--- a/templates/index.html
+++ b/templates/index.html
@@ -1,34 +1,19 @@
 {% load staticfiles %}
 <!DOCTYPE html>
-	<head>
-	<link rel="stylesheet" type="text/css" href="{% static 'bower_components/bootstrap/dist/css/bootstrap.css' %}">
-	</head>
-	
-	<body ng-app="teamreporterapp" >
-		<nav class="navbar navbar-default">
-			<i class="fa fa-spinner fa-spin spinner" style="font-size:48px" ng-show="io"></i>
-			<div class="container-fluid">
-			  <div class="navbar-header">
-				<a class="navbar-brand" href="#">Boomerang</a>
-			  </div>
-			  <div id="navbar" class="navbar-collapse collapse">
-				<ul class="nav navbar-nav">
-				  <li class="active"><a href="#">Home</a></li>
-				  {% if user.is_authenticated %}
-				  	<li ><a href="{% url 'auth_logout' %}">Logout</a></li>
-				  {% endif %}
-				</ul>
-			  </div><!--/.nav-collapse -->
-			</div><!--/.container-fluid -->
-		</nav>
-	<div class = "container" >
-	{% verbatim %}
-		<div ui-view>
-		
-		</div>
-	{% endverbatim %}
-	</div>
-	
-	{% include 'javascripts.html' %}
-	</body>
+<head>
+    <link rel="stylesheet" type="text/css" href="{% static 'bower_components/bootstrap/dist/css/bootstrap.css' %}">
+</head>
+
+<body ng-app="teamreporterapp">
+{% include "navbar.html" %}
+<div class="container">
+    {% verbatim %}
+    <div ui-view>
+
+    </div>
+    {% endverbatim %}
+</div>
+
+{% include 'javascripts.html' %}
+</body>
 </html>
