http(s) agnostic scripting

--- a/templates/thankyou.html
+++ b/templates/thankyou.html
@@ -19,7 +19,7 @@
         var q = "thank you"; // search query
 
         var request = new XMLHttpRequest;
-        request.open('GET', 'http://api.giphy.com/v1/gifs/random?api_key=dc6zaTOxFJmzC&tag=' + q, true);
+        request.open('GET', '//api.giphy.com/v1/gifs/random?api_key=dc6zaTOxFJmzC&tag=' + q, true);
 
         request.onload = function () {
             if (request.status >= 200 && request.status < 400) {
