new model to handle daily reports / old report model becomes scheduling part for general team report managemnet / rewiring and refactoring for new flow

--- a/templates/email/summary.html
+++ b/templates/email/summary.html
@@ -8,7 +8,7 @@
 <h2>{% blocktrans %}Hello <b>{{ name }}</b>!{% endblocktrans %}</h2>
 {% endwith %}
 {% if user_sent_report %}
-<p>{% blocktrans %}Thank you for your participating in this survey!{% endblocktrans %}</h2>
+<p>{% blocktrans %}Again, thank you for participating in this survey!{% endblocktrans %}</h2>
 {% else %}
 <p>{% blocktrans %}Unfortunately we didn't get your response. Hope we'll meet next time. {% endblocktrans %}</p>
 {% endif %}
