--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <head>
     <link rel="stylesheet" type="text/css" href="{% static 'bower_components/bootstrap/dist/css/bootstrap.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'bower_components/angular-toastr/dist/angular-toastr.min.css' %}">
 </head>
 
 <body ng-app="teamreporterapp">
