--- a/templates/javascripts.html
+++ b/templates/javascripts.html
@@ -9,6 +9,7 @@
 <script type="text/javascript" src="{% static 'bower_components/angular-ui-router/release/angular-ui-router.min.js' %}"></script>
 <script type="text/javascript" src="{% static 'bower_components/angular-bootstrap-multiselect/angular-bootstrap-multiselect.js' %}"></script>
 <script type="text/javascript" src="{% static 'bower_components/angular-resource/angular-resource.min.js' %}"></script>
+<script type="text/javascript" src="{% static 'bower_components/angular-toastr/dist/angular-toastr.tpls.min.js' %}"></script>
 
 <script type="text/javascript" src="{% static 'javascripts/app.module.js' %}"></script>
 <script type="text/javascript" src="{% static 'javascripts/app.routes.js' %}"></script>
