--- a/templates/errors/generic.html
+++ b/templates/errors/generic.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 {% load i18n %}
 
-{% block title %}{% blocktrans %}Boomerang lost!{% endblocktrans %}{% endblock %}
+{% block title %}{{ title }}{% endblock %}
 {% block content %}
 <div class="container">
     <div class="jumbotron">
